fixed spacing on footer and made size of text and menu more dynamic, also ensured that margins were maintained when window gets smaller and min height and width are set

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
     grid-template: 200px 1fr 100px/ 20vw 1fr 20vw;
     margin: 0px;
     padding: 0px;
-    min-width: 100vw;
+    min-width:90%;
     min-height: 100vh;
     
 }
@@ -60,6 +60,7 @@ into the nav element */
     grid-column: 1 / span 1;
     grid-row: 2/ span 1;
     padding: 10%;
+    min-width: 150px;
 }
 
 nav{
@@ -83,7 +84,8 @@ nav a{
     font-family: sarif;
     color: black;
     text-decoration: none;
-    padding: 30px;
+    padding: calc(10px + 1vw);
+    font-size: calc(1px + 1vw);
 }
 nav a:hover{
     background-color: black;
@@ -138,6 +140,8 @@ nav a:hover{
     grid-column: 2;
     display: flex;
     flex-wrap: wrap;
+    background-color: black;
+    
 }
 
 .main_body p{
@@ -166,18 +170,20 @@ nav a:hover{
 
 .footer ul{
     display:grid;
-    grid-template-columns: repeat(3, 420px);
+    grid-template-columns: repeat(3, 1fr);
+    min-width: 33vw;
+    padding: 0;
 }
 
-/* .footer li{
-    text-align: center;
 
-} */
 
 .footer a{
     color: #AD9CE7;
     text-decoration: none;
-    padding-inline: 150px;
+}
+
+.footer li{
+    max-width: 250px;
 }
 
 .footer a:hover{
